# rolldown

./: .eslintignore  .eslintrc.yml  .gitignore  .gitmodules  .prettierignore  Cargo.toml  README.md  binding.js  lerna.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.js  tsconfig.json
core/: Cargo.toml  fixtures
core/examples/: build.rs  bundle.rs  gen.rs
core/src/: bundle.rs  chunk.rs  compiler.rs  external_module.rs  graph.rs  lib.rs  module.rs  module_loader.rs  statement.rs  worker.rs
core/src/ast/: mod.rs
core/src/ext/: mod.rs
core/src/hook_driver/: mod.rs
core/src/linker/: mod.rs
core/src/module/: analyse.rs  mod.rs  scope.rs  symbol_resolver.rs
core/src/module/renamer/: mod.rs
core/src/plugin/: mod.rs
core/src/plugin/alias/: mod.rs
core/src/plugin_driver/: mod.rs
core/src/plugins/: mod.rs  node_resolve.rs
core/src/renamer/: mod.rs
core/src/scanner/: helper.rs  mod.rs  rel.rs  scope.rs  symbol.rs
core/src/statement/: analyser.rs  mod.rs
core/src/statement/analyse/: mod.rs  relationship_analyzer.rs  scope.rs  scope_analyzer.rs
core/src/structs/: mod.rs
core/src/symbol_box/: mod.rs
core/src/types/: mod.rs  mod_or_ext.rs  normalized_input_options.rs  normalized_output_options.rs
core/src/utils/: ast.rs  ast_sugar.rs  chunk_assignment.rs  execution_order.rs  lcp.rs  mod.rs  name_helpers.rs  plugin_driver.rs  resolve_id.rs  side_effect.rs  transform.rs  union_find.rs
core/src/utils/hook/: load.rs  mod.rs  resolve_id.rs
core/tests/: bundle.rs  graph.rs  package.json  snapshot.rs
core/tests/fixtures/: symbols.js
core/tests/fixtures/basic/: main.js
core/tests/fixtures/conflicted/: a1.js  a2.js  index.js
core/tests/fixtures/dynamic-import/: foo.js  main.js
core/tests/fixtures/inter_module/: bar.js  baz.js  foo.js  index.js
core/tests/fixtures/namespace/: bar.js  index.js
core/tests/fixtures/re_export_default/: index.js
core/tests/fixtures/tree-shaking/: a.js  b.js  index.js
core/tests/fixtures/tree-shaking-advanced/: foo.js  index.js
core/tests/snapshots/: snapshot__basic.snap
node/: CHANGELOG.md  Cargo.toml  binding.d.ts  binding.js  index.d.ts  index.js  package.json
node/__test__/: core.spec.ts  core.spec.ts.md  core.spec.ts.snap
node/__test__/fixtures/: main.js  no-used.js
node/npm/android-arm64/: README.md  package.json
node/npm/darwin-arm64/: package.json
node/npm/darwin-x64/: package.json
node/npm/linux-arm-gnueabihf/: package.json
node/npm/linux-arm64-gnu/: package.json
node/npm/linux-arm64-musl/: README.md  package.json
node/npm/win32-arm64-msvc/: README.md  package.json
node/npm/win32-ia32-msvc/: README.md
node/npm/win32-x64-msvc/: package.json
node/src/: lib.rs
(+21 files in other folders)
