[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "rolldown"
version = "0.0.1"

[[example]]
bench = false
name = "build"
path = "examples/build.rs"
test = false

[dependencies.swc_common]
features = ["tty-emitter", "concurrent"]
version = "0.14.7"

[dependencies]
ahash = "0.7"
env_logger = "0.9"
log = "0.4"
once_cell = "1"
rayon = "1.5.1"
swc_ecma_ast = "0.58.1"
swc_ecma_codegen = "0.80.0"
swc_ecma_parser = "0.78.10"
swc_ecma_visit = "0.44"
nodejs_path = "*"
petgraph = "0.6.0"
swc_atoms = "0.2.9"
dashmap = "5.0.0"
ena = "0.14.0"
crossbeam = "0.8.1"
num_cpus = "1.13.1"
smol_str = "0.1.21"