[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "rolldown"
version = "0.0.1"

[[example]]
bench = false
name = "build"
path = "examples/build.rs"
test = false

[dependencies.swc_common]
features = ["tty-emitter", "concurrent"]
version = "0.17.2"

[dependencies]
ahash = "0.7"
anyhow = "1"
crossbeam = "0.8.1"
dashmap = "5.0.0"
ena = "0.14.0"
env_logger = "0.9"
linked-hash-map = "0.5.4"
log = "0.4"
node-resolve = "2.2.0"
nodejs_path = "=0.0.8"
num_cpus = "1.13.1"
once_cell = "1"
petgraph = "0.6.0"
rayon = "1.5.1"
regex = "1.5.4"
smol_str = "0.1.21"
swc_atoms = "0.2.9"
swc_ecma_ast = "0.70"
swc_ecma_codegen = "0.95"
swc_ecma_parser = "0.93"
swc_ecma_visit = "0.56"
thiserror = "1"

[dev_dependencies]
insta = "1.11.0"
