[package]
edition = "2018"
name = "node"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["serde_json"] }
napi-derive = { version = "2", default-features = false, features = [
  "type-def",
] }
rolldown = { path = "../core" }
serde = "1"
serde_derive = "1"
serde_json = "1"

[build-dependencies]
napi-build = "1"
